--- a/src/svxlink/systemd/svxlink-upnp.service.in
+++ b/src/svxlink/systemd/svxlink-upnp.service.in
@@ -17,7 +17,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 [Unit]
-Description=Setup UPNP NAT for SvxLink
+Description=Setup UPnP NAT for SvxLink
 After=network.target
 
 [Service]
@@ -26,8 +26,8 @@ ExecStartPre=/bin/bash -c "/bin/systemctl set-environment ip_addr=$(/bin/hostnam
 ExecStart=/usr/bin/upnpc -a ${ip_addr} 5198 5198 udp
 ExecStart=/usr/bin/upnpc -a ${ip_addr} 5199 5199 udp
 RemainAfterExit=true
-ExecStop=/usr/bin/upnpc -d ${ip_addr} 5198 5198 udp
-ExecStop=/usr/bin/upnpc -d ${ip_addr} 5199 5199 udp
+ExecStop=/usr/bin/upnpc -d 5198 udp
+ExecStop=/usr/bin/upnpc -d 5199 udp
 StandardOutput=journal
 
 [Install]
