--- a/src/svxlink/systemd/svxlink-upnp.service.in
+++ b/src/svxlink/systemd/svxlink-upnp.service.in
@@ -23,11 +23,13 @@ After=network.target
 [Service]
 Type=oneshot
 ExecStartPre=/bin/bash -c "/bin/systemctl set-environment ip_addr=$(/bin/hostname -I | cut -d' ' -f1)"
-ExecStart=/usr/bin/upnpc -a ${ip_addr} 5198 5198 udp
-ExecStart=/usr/bin/upnpc -a ${ip_addr} 5199 5199 udp
+ExecStart=/usr/bin/upnpc -e EchoLink -a ${ip_addr} 5198 5198 udp
+ExecStart=/usr/bin/upnpc -e EchoLink -a ${ip_addr} 5199 5199 udp
+ExecStart=/usr/bin/upnpc -e SSH -a ${ip_addr} 22 65022 tcp
 RemainAfterExit=true
 ExecStop=/usr/bin/upnpc -d 5198 udp
 ExecStop=/usr/bin/upnpc -d 5199 udp
+ExecStop=/usr/bin/upnpc -d 65022 tcp
 StandardOutput=journal
 
 [Install]
