--- a/src/svxlink/systemd/CMakeLists.txt
+++ b/src/svxlink/systemd/CMakeLists.txt
@@ -21,7 +21,7 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/svxlink_gpio_setup.service
               ${CMAKE_CURRENT_BINARY_DIR}/svxlink.service
               ${CMAKE_CURRENT_BINARY_DIR}/remotetrx.service
               ${CMAKE_CURRENT_BINARY_DIR}/svxreflector.service
-              ${CMAKE_CURRENT_BINARY_DIR}/svxlink-upnp.service
+              ${CMAKE_CURRENT_BINARY_DIR}/svxlink_upnp.service
         DESTINATION ${SYSTEMD_CONFIGURATIONS_FILES_DIR})
 message(STATUS "Systemd unit files will be installed to "
         "${SYSTEMD_CONFIGURATIONS_FILES_DIR} after make install")
